substrate/frame/support/test/tests/pallet_ui/storage_invalid_rename_value.stderr
error: `pub` is not a valid identifier
  --> tests/pallet_ui/storage_invalid_rename_value.rs:30:29
   |
30 |     #[pallet::storage_prefix = "pub"]
   |                                ^^^^^
